<resources>
    <string name="app_name">MedicaApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userName">Melie Casares</string>
    <string name="appointmentTitle">Cites</string>
    <string name="usuari">Usuari</string>
    <string name="contrasenya">Contrasenya</string>
    <string name="medicaplus">Medicaplus</string>
    <string name="registrar_se">Registrar-se</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="motive">Motiu: </string>
    <string name="motiveText">motive</string>
    <string name="configTitle">Configuracio</string>
    <string name="dark_theme_label">Mode fosc: </string>
    <string name="preferedName">Nom Preferit: </string>
    <string name="text_size">Mida del text: </string>
    <string name="size_example">A</string>
    <string name="registerButton">Registro</string>
    <string name="loginButton">Login</string>
    <string name="appointmentButton">Cites</string>
    <string name="preferencesButton">Preferencies</string>
    <string name="nom">Nom</string>
    <string name="email">Email</string>
    <string name="confirmar_contrasenya">Confirmar Contrasenya</string>
    <string name="perfil">Perfil</string>
    <string name="tanca_sessio">Tanca sessio</string>
    <string name="navigation_drawer_open">open navigation drawer</string>
    <string name="navigation_drawer_close">close navigation drawer</string>
    <string name="cancelAppointment">Cancel·lar cita</string>
    <string name="add_appointment_text">Demanar Cita</string>
    <string name="modificar_cita">Modificar cita</string>
    <string name="Stats">Estadístiques</string>
    <string name="appointments_day">Cites creades per dia</string>
</resources>